--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,4 +49,6 @@
 
   <!-- jQuery -->
   <script src="{{ "/assets/jquery/jquery.min.js" | prepend: site.baseurl }}"></script>
+
+  <script src="https://use.fontawesome.com/7091360c9b.js"></script>
 </head>
