--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="{{ "/assets/bootstrap/css/bootstrap.min.css" | prepend: site.baseurl }}">
 
   <!-- Custom styles -->
   <link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}">
