--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
+        <li><a href="/programs">Programs</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="hidden">
