--- a/css/styles.scss
+++ b/css/styles.scss
@@ -73,3 +73,209 @@
     padding: 10px;
   }
 }
+
+// Social icons
+#header {
+  background: #fff;
+  border-top: 10px solid #f1f2f2;
+  height: 120px;
+  position: relative;
+  z-index: 100;
+  box-shadow: 0 2px 4px 0 rgba(74, 74, 74, 0.5);
+  #logo {
+    display: inline-block;
+    margin-top: 15px;
+    width: 225px;
+  }
+  .social {
+    float: right;
+    margin-top: 10px;
+    margi-right: 10px;
+    a {
+      display: block;
+      float: left;
+      width: 26px;
+      height: 20px;
+      margin: 0 8px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      &:hover {
+        opacity: 0.6;
+      }
+      &.twitter {
+        background-image: url(/assets/images/social/twitter.png);
+      }
+      &.facebook {
+        background-image: url(/assets/images/social/facebook.png);
+      }
+      &.google {
+        background-image: url(/assets/images/social/google.png);
+      }
+      &.youtube {
+        background-image: url(/assets/images/social/youtube.png);
+      }
+      &.instagram {
+        background-image: url(/assets/images/social/instagram.png);
+      }
+      &.linkedin {
+        background-image: url(/assets/images/social/linkedin.png);
+      }
+    }
+  }
+}
+
+.panel-default {
+  border-color: #ddd;
+}
+.panel {
+  margin-bottom: 18px;
+  background-color: #fff;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+}
+
+// Padding and margins.
+.padding-4 {
+  padding: 36px;
+}
+.margin-bottom-4 {
+  margin-bottom: 36px;
+}
+.margin-bottom-2 {
+  margin-bottom: 18px;
+}
+.margin-top-0 {
+  margin-top: 0;
+}
+.padding-right-2 {
+  padding-right: 18px;
+}
+
+.padding-top-0 {
+  padding-top: 0
+}
+.padding-bottom-0 {
+  padding-bottom: 0
+}
+.padding-left-0 {
+  padding-left: 0
+}
+.padding-right-0 {
+  padding-right: 0
+}
+.padding-top-1 {
+  padding-top: 9px
+}
+.padding-top-2 {
+  padding-top: 18px
+}
+.padding-top-4 {
+  padding-top: 36px
+}
+.padding-left-1 {
+  padding-left: 9px
+}
+.padding-left-2 {
+  padding-left: 18px
+}
+.padding-left-4 {
+  padding-left: 36px
+}
+.padding-right-1 {
+  padding-right: 9px
+}
+.padding-right-2 {
+  padding-right: 18px
+}
+.padding-right-4 {
+  padding-right: 36px
+}
+.padding-bottom-1 {
+  padding-bottom: 9px
+}
+.padding-bottom-2 {
+  padding-bottom: 18px
+}
+.padding-bottom-4 {
+  padding-bottom: 36px
+}
+.padding-0 {
+  padding: 0
+}
+.padding-1 {
+  padding: 9px
+}
+.padding-2 {
+  padding: 18px
+}
+.padding-4 {
+  padding: 36px
+}
+.margin-top-0 {
+  margin-top: 0
+}
+.margin-bottom-0 {
+  margin-bottom: 0
+}
+.margin-left-0 {
+  margin-left: 0
+}
+.margin-right-0 {
+  margin-right: 0
+}
+.margin-top-1 {
+  margin-top: 9px
+}
+.margin-top-2 {
+  margin-top: 18px
+}
+.margin-top-4 {
+  margin-top: 36px
+}
+.margin-left-1 {
+  margin-left: 9px
+}
+.margin-left-2 {
+  margin-left: 18px
+}
+.margin-left-4 {
+  margin-left: 36px
+}
+.margin-right-1 {
+  margin-right: 9px
+}
+.margin-right-2 {
+  margin-right: 18px
+}
+.margin-right-4 {
+  margin-right: 36px
+}
+.margin-bottom-1 {
+  margin-bottom: 9px
+}
+.margin-bottom-2 {
+  margin-bottom: 18px
+}
+.margin-bottom-4 {
+  margin-bottom: 36px
+}
+.margin-0 {
+  margin: 0
+}
+.margin-1 {
+  margin: 9px
+}
+.margin-2 {
+  margin: 18px
+}
+.margin-4 {
+  margin: 36px
+}
+
+
+// Media
+.media {
+  zoom: 1;
+  overflow: hidden;
+}
