--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -1,6 +1,21 @@
 ---
 layout: default
 ---
-{{ content }}
+<div class="container" style="margin-top: 4em">
+  <div class="row">
 
-{% include programs.html %}
+    <div class="col-lg-8">
+      <div class="spacing"></div>
+
+      {{ content }}
+
+    </div>
+    <div class="col-lg-4">
+      <div class="spacing"></div>
+      <h4>Project Details</h4>
+      <div class="hline"></div>
+      <p><b>Date:</b> {{ page.date | date: "%b %-d, %Y" }}</p>
+    </div>
+  </div><!--/row -->
+</div><!--/container -->
+
