--- a/css/styles.scss
+++ b/css/styles.scss
@@ -279,3 +279,16 @@
   zoom: 1;
   overflow: hidden;
 }
+
+// Backgrounds.
+.bg-white {
+  background-color: #ffffff;
+}
+
+.bg-gray {
+  background-color: #f5f5f5;
+}
+
+.prose {
+  // padding-top: 100px; padding-bottom: 100px;
+}
