--- a/_includes/programs.html
+++ b/_includes/programs.html
@@ -4,12 +4,11 @@
   </div>
   {% for program in site.programs limit:include.limit %}
     <div class="col-sm-4 col-centered">
-      <div class="panel panel-default padding-4 text-center" style="min-height: 380px; margin-bottom: 2em;">
-        <div style="transform: scale(1.5); margin: 26px auto; width: 30px; height: 30px; padding: 2px; text-align: center; box-shadow: 0 0 0 2px #eee; border-radius: 50%;">
+      <div class="panel panel-default padding-4 text-center program-panel">
+        <div class="panel-icon">
           <i class="fa fa-book"></i>
         </div>
-        <h4>{{ program.title }}</h4>
-        <a href="{{  program.url | prepend: site.baseurl }}"><i class="fa fa-link"></i></a>
+        <h4><a href="{{ program.url | prepend: site.baseurl }}">{{ program.title }}</a></h4>
         <p>{{ program.excerpt | strip_html | truncatewords:35 }}</p>
       </div>
     </div>
