--- a/css/styles.scss
+++ b/css/styles.scss
@@ -289,6 +289,23 @@
   background-color: #f5f5f5;
 }
 
-.prose {
-  // padding-top: 100px; padding-bottom: 100px;
+.space-by-100 {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.panel-icon {
+  transform: scale(1.5);
+  margin: 26px auto;
+  width: 30px;
+  height: 30px;
+  padding: 2px;
+  text-align: center;
+  box-shadow: 0 0 0 2px #eee;
+  border-radius: 50%;
+}
+
+.program-panel {
+  min-height: 380px;
+  margin-bottom: 2em;
 }
