--- a/_includes/programs.html
+++ b/_includes/programs.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12 text-center margin-bottom-4">
-    <h2 class="margin-bottom-4 margin-top-0">Programs</h2>
+    <h2 class="margin-bottom-4 margin-top-0">Our Programs</h2>
   </div>
   {% for program in site.programs limit:include.limit %}
     <div class="col-sm-4 col-centered">
