--- a/_includes/js.html
+++ b/_includes/js.html
@@ -4,6 +4,17 @@
 <!-- Core JS -->
 <script src="{{ "/js/core.js" | prepend: site.baseurl }}"></script>
 
+<!-- FB -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=134483447250254';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Google Analytics -->
 {% if site.analytics and jekyll.environment != "development" %}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
