--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,25 @@
-<footer class="footer container" role="contentinfo">
-  <div class="col-md-12">
-    <div class="col-md-6">
-      <div class="region region-footer">
-        <nav role="navigation">
-          <ul class="menu nav">
-            <li>
-              <a class="is-active" href="/">Home</a>
-            </li>
-            <li>
-              <a href="/about">About YEP</a>
-            </li>
-            <li>
-              <a href="http://yepnetwork.org/what-yep-offers.html">Our Goal</a>
-            </li>
-            <li>
-              <a href="/contact">Contact</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-    <div class="copy col-md-6">
-      Copyright &copy; 2012-2017 Your Ethiopian Professionals Network (YEP).
+<footer class="footer" role="contentinfo">
+  <div class="col-md-12 content padding-top-4 padding-bottom-4">
+    <div class="col-md-12 text-center" style="color: #fff">
+      <a href="https://www.facebook.com/YourEthiopianProfessionals/" target="_blank"><img src="/assets/images/icons/light-facebook-48.png" height="24" width="24"></a>
+      <a href="https://twitter.com/YEPnetworks" target="_blank"><img src="/assets/images/icons/light-twitter-48.png" height="24" width="24"></a>
+      <a href="https://www.instagram.com/yepnetwork/" target="_blank"><img src="/assets/images/icons/light-instagram-48.png" height="24" width="24"></a>
     </div>
   </div>
+  <div class="col-md-12 content padding-bottom-4 text-center">
+    <div class="copy">
+      <div class="margin-bottom-2">
+        <span class="strong">Copyright &copy; 2017 Your Ethiopian Professionals (YEP), All rights reserved.</span>
+      </div>
+      <p class="strong">Our mailing address is:</p>
+      <p>Your Ethiopian Professionals (YEP)</p>
+      <p>
+        <a href="https://maps.google.com/?q=901+S+Highland+St.%C2%A0Arlington,%C2%A0VA%C2%A022204">
+          901 S Highland St.,
+          Arlington, VA 22204
+        </a>
+      </p>
+    </div>
+  </div>
+
 </footer>
