--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -2,15 +2,54 @@
   margin-top: 45px;
   padding-top: 35px;
   padding-bottom: 36px;
-  border-top: 1px solid #E5E5E5;
 
-  ul.menu {
-    li {
+  .social-media-links {
+    a {
+      display:block;
+      border:0;
+      height:auto;
+      outline:none;
+      text-decoration:none;
       float: left;
+      margin-right: 0.5em;
     }
   }
 
-  .copy {
-    padding: 10px;
+  .content {
+    background:#1f2934 none no-repeat center/cover;
+    background-color:#1f2934;
+    background-image:none;
+    background-repeat:no-repeat;
+    background-position:center;
+    background-size:cover;
+    border-top:0;
+    border-bottom:0;
+
+    .copy {
+      padding-top:0;
+      padding-right:18px;
+      padding-bottom:9px;
+      padding-left:18px;
+      word-break:break-word;
+      color:#ffffff;
+      font-family:Helvetica;
+      font-size:12px;
+      line-height:150%;
+      text-align:center;
+
+      a {
+        color: #fff;
+      }
+      p {
+        overflow: none;
+        margin: 0;
+
+        &.strong {
+          font-weight: bold;
+        }
+      }
+    }
+
   }
+
 }
