--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -3,19 +3,16 @@ layout: default
 ---
 <div class="container" style="margin-top: 4em">
   <div class="row">
-
-    <div class="col-lg-8">
+    <div class="col-md-10">
       <div class="spacing"></div>
-
+      <h2>{{ page.title }}</h2>
       {{ content }}
+    </div>
 
-    </div>
-    <div class="col-lg-4">
+    <div class="col-md-2">
       <div class="spacing"></div>
-      <h4>Project Details</h4>
-      <div class="hline"></div>
-      <p><b>Date:</b> {{ page.date | date: "%b %-d, %Y" }}</p>
+      <h4>Program Details</h4>
     </div>
-  </div><!--/row -->
-</div><!--/container -->
+  </div>
+</div>
 
