Added events section; updated programs.

--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -39,9 +39,8 @@
   margin-bottom: 2em;
 }
 
-.hero-program {
+.hero {
   position: relative;
-  background-image: url(/assets/images/programs/professional-mentorship.jpg);
   background-size: cover;
   background-position: center -50px;
   background-attachment: fixed;
