Added new theme.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,24 @@
-<footer class="footer" role="contentinfo">
-  <div class="col-md-12 content padding-top-4 padding-bottom-4">
-    <div class="col-md-12 text-center" style="color: #fff">
-      <a href="https://www.facebook.com/YourEthiopianProfessionals/" target="_blank"><img src="/assets/images/icons/light-facebook-48.png" height="24" width="24"></a>
-      <a href="https://twitter.com/YEPnetworks" target="_blank"><img src="/assets/images/icons/light-twitter-48.png" height="24" width="24"></a>
-      <a href="https://www.instagram.com/yepnetwork/" target="_blank"><img src="/assets/images/icons/light-instagram-48.png" height="24" width="24"></a>
-    </div>
-  </div>
-  <div class="col-md-12 content padding-bottom-4 text-center">
-    <div class="copy">
-      <div class="margin-bottom-2">
-        <span class="strong">Copyright &copy; 2017 Your Ethiopian Professionals (YEP), All rights reserved.</span>
+<footer id="footer2">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5 col-sm-6 col-xs-12">
+        <div class="fine-print">&copy; {{ site.title }} 2017
+        </div>
       </div>
-      <p class="strong">Our mailing address is:</p>
-      <p>Your Ethiopian Professionals (YEP)</p>
-      <p>
-        <a href="https://maps.google.com/?q=901+S+Highland+St.%C2%A0Arlington,%C2%A0VA%C2%A022204">
-          901 S Highland St.,
-          Arlington, VA 22204
-        </a>
-      </p>
+      <div class="col-md-7 col-sm-6 col-xs-12">
+        <ul class="socmed">
+          <li class="facebook">
+            <a href="https://www.facebook.com/YourEthiopianProfessionals" class="sprite" alt="{{ site.title }} Facebook image">
+              <i class="fa fa-facebook"></i>
+            </a>
+          </li>
+          <li class="twitter">
+            <a href="https://twitter.com/YEPnetworks" class="sprite" alt="{{ site.title }} Twitter image">
+              <i class="fa fa-twitter"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-
 </footer>
