--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,8 +3,8 @@
 ---
 @charset "utf-8";
 
-@import "font";
-@import "header";
+@import "variables";
+@import "nav";
 @import "panels";
 @import "padding-margins";
 @import "footer";
