--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,50 @@
-<!-- Header -->
-<header>
+{% include sitehead.html %}
+
+<nav id="navbar-main" class="navbar navbar-default" role="navigation">
   <div class="container">
-    <div class="intro-text">
-      &nbsp;
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="{% if page.body_class == "front" %} active {% endif %}">
+          <a href="{{ "/" | prepend: site.baseurl }}">Home</a>
+        </li>
+        <li class="dropdown {% if page.body_class == "about" %} active {% endif %}">
+          <a href="{{ "/about" | prepend: site.baseurl }}">About</a>
+        </li>
+        <li class="dropdown {% if page.title == "Programs" %} active {% endif %}">
+          <a href="{{ "/programs" | prepend: site.baseurl }}">Programs</a>
+        </li>
+        <li class="last dropdown {% if page.title == "Events" %} active {% endif %}">
+          <a href="{{ "/events" | prepend: site.baseurl }}">Events</a>
+        </li>
+      </ul>
     </div>
   </div>
-</header>
+</nav>
+<div id="subnav-wrapper" class="hidden-xs" role="navigation" style="display: none;">
+  <nav id="subnav" class="navbar navbar-default" role="navigation" id="subnav">
+    <div class="container">
+      <ul class="nav navbar-nav collapse" id="one">
+        <li><a href="#" id="">One sub 1</a></li>
+        <li><a href="#" id="">One sub 2</a></li>
+        <li><a href="#" id="">One sub 3</a></li>
+      </ul>
+      <ul class="nav navbar-nav collapse" id="two">
+        <li><a href="#" id="">Two sub 1</a></li>
+        <li><a href="#" id="">Two sub 2</a></li>
+        <li><a href="#" id="">Two sub 3</a></li>
+      </ul>
+       <ul class="nav navbar-nav collapse" id="three">
+        <li><a href="#" id="">Three sub 1</a></li>
+        <li><a href="#" id="">Three sub 2</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
