--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,54 +1,11 @@
-.footer {
+#footer2 {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: $footer-height;
+
   margin-top: 45px;
   padding-top: 35px;
-
-  .social-media-links {
-    a {
-      display:block;
-      border:0;
-      height:auto;
-      outline:none;
-      text-decoration:none;
-      float: left;
-      margin-right: 0.5em;
-    }
-  }
-
-  .content {
-    background:#1f2934 none no-repeat center/cover;
-    background-color:#1f2934;
-    background-image:none;
-    background-repeat:no-repeat;
-    background-position:center;
-    background-size:cover;
-    border-top:0;
-    border-bottom:0;
-
-    .copy {
-      padding-top:0;
-      padding-right:18px;
-      padding-bottom:9px;
-      padding-left:18px;
-      word-break:break-word;
-      color:#ffffff;
-      font-family:Helvetica;
-      font-size:12px;
-      line-height:150%;
-      text-align:center;
-
-      a {
-        color: #fff;
-      }
-      p {
-        overflow: none;
-        margin: 0;
-
-        &.strong {
-          font-weight: bold;
-        }
-      }
-    }
-
-  }
-
+  padding-bottom: 36px;
+  padding: 0px;
 }
