--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -1,66 +1,22 @@
 <section id="slider">
-  <!-- meta slider -->
   <div style="width: 100%;" class="metaslider metaslider-responsive metaslider-37551 ml-slider hidden-xs">
-
     <div id="metaslider_container_37551">
       <div id='metaslider_37551' class='carousel slide' data-ride='carousel'>
         <div class='carousel-inner'>
           <div class='item active'>
-            <img src="/assets/images/manari-slide-0x0.jpg" alt="" class="slider-37551 slide-50697"
-            />
-            <div class="carousel-caption">
-              <div class="cta-text">
-                <div class="support-line">Change-maker Stories</div>
-                <div class="cta-headline">Meet Manari</div>
-                <div class="cta-description">Manari is a healer and leader of the Sápara people, who are defending their rainforest territory from
-                  oil exploitation.</div>
-                <div class="cat-description">
-                  <br>
-                  <!--HubSpot Call-to-Action Code -->
-                  <span class="hs-cta-wrapper" id="hs-cta-wrapper-9d4ea89d-1ea9-4d8f-807a-237bbe75c147">
-                    <span class="hs-cta-node hs-cta-9d4ea89d-1ea9-4d8f-807a-237bbe75c147" id="hs-cta-9d4ea89d-1ea9-4d8f-807a-237bbe75c147">
-                      <!--[if lte IE 8]><div id="hs-cta-ie-element"></div><![endif]-->
-                      <a href="https://cta-redirect.hubspot.com/cta/redirect/2558415/9d4ea89d-1ea9-4d8f-807a-237bbe75c147">
-                        <img class="hs-cta-img" id="hs-cta-img-9d4ea89d-1ea9-4d8f-807a-237bbe75c147" style="border-width:0px;"
-                          src="https://no-cache.hubspot.com/cta/default/2558415/9d4ea89d-1ea9-4d8f-807a-237bbe75c147.png"
-                          alt="Read Manaris's Story" />
-                      </a>
-                    </span>
-                    <script charset="utf-8" src="https://js.hscta.net/cta/current.js"></script>
-                    <script type="text/javascript">
-                      hbspt.cta.load(2558415, '9d4ea89d-1ea9-4d8f-807a-237bbe75c147', {});
-                    </script>
-                  </span>
-                  <!-- end HubSpot Call-to-Action Code -->
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class='item'>
             <img src="/assets/images/Canoe_Sacred_Headwaters-0x0.jpg" alt="" class="slider-37551 slide-49266"
             />
             <div class="carousel-caption">
               <div style="padding:15px;background: rgba(0, 0, 0, 0.6);">
-                <h3>The Next Phase of Our Work in the Amazon</h3>
-                <p>Securing permanent protection of the Sacred Headwaters region in Ecuador and Peru.</p>
-                <a onclick="ga('send', 'event', 'Sliders', 'Click', 'Livestream Slider 1');" href="#"
-                  class="btn btn-donate  btn-lg">Learn More</a>
-                </p>
+                <h3>The Future of Ethiopian Professionals</h3>
+                <p>Securing the skills necessary to build a community for the next generation of thinkers and leaders.</p>
               </div>
             </div>
           </div>
         </div>
-        <a class="left carousel-control" href="#metaslider_37551" data-slide="prev">
-          <i class="fa fa-chevron-circle-left"></i>
-        </a>
-        <a class="right carousel-control" href="#metaslider_37551" data-slide="next">
-          <i class="fa fa-chevron-circle-right"></i>
-        </a>
       </div>
-
     </div>
     <script type="text/javascript">
     </script>
   </div>
-  <!--// meta slider-->
 </section>
