Updated program callout.

--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -1,7 +1,7 @@
 <section id="programs-callout">
   <div class="container">
     <h2 class="h1 section-head">Get Involved</h2>
-    <p class="intro">Protecting the source, inspiring the future</p>
+    <p class="intro">Building a community, inspiring the future</p>
     <div class="row">
       <div class="col-xs-12 col-md-4">
         <div class="card">
@@ -9,11 +9,14 @@
             <img src="/assets/images/programs_callout_1.jpg">
           </figure>
           <div class="copy-holder">
-            <h3>Up to Us Education Program</h3>
-            <p>Transform your world through a Pachamama Alliance workshop, including our flagship Awakening the Dreamer
-              program.
-              <br>
-              <a href="/engage" class="has-mp-click btn btn-donate" data-event-label="Click Up to Us Learn More Button">Learn More</a>
+            <h3>Career Development Program</h3>
+            <p>
+            The Career Development Program provides a platform to help members
+            in their career development journey, from finding and gaining
+            employment through progressing towards individual career goals. YEP
+            organizes various programs and events such as invited...
+            <br>
+            <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
           </div>
         </div>
@@ -25,10 +28,13 @@
             <img src="/assets/images/programs_callout_2.jpg">
           </figure>
           <div class="copy-holder">
-            <h3>Journey to the Amazon</h3>
-            <p>Accept the invitation of our indigenous partners and journey with us to their ancestral rainforest home.
-              <br>
-              <a href="/journeys" class="has-mp-click btn btn-donate" data-event-label="Click Journeys Learn More Button">Learn More</a>
+            <h3>Diaspora & Community Engagement</h3>
+            <p>
+            The Diaspora and Community Engagement (DCE) Program looks to
+            strengthen community relations and support the development of a
+            cohesive network.
+            <br>
+            <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
           </div>
         </div>
@@ -40,11 +46,14 @@
             <img src="/assets/images/programs_callout_3.jpg">
           </figure>
           <div class="copy-holder">
-            <h3>Take a Stand for Life Itself</h3>
-            <p>Our advocacy initiatives in the Amazon forward a new worldview that respects the rights of indigenous peoples
-              and rights of Nature.
-              <br>
-              <a href="/advocacy" class="has-mp-click btn btn-donate" data-event-label="Click Advocacy Learn More Button">Learn More</a>
+            <h3>Professional Mentorship</h3>
+            <p>
+            The Professional Mentorship Program is now live! The program
+            enables a one-on-one professional learning relationship between a
+            mentor and mentee for members to expand their knowledge, leadership
+            skills and enhance professional competencies.
+            <br>
+            <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
           </div>
         </div>
