--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -35,3 +35,42 @@
     position: relative;
   }
 }
+
+#hero-front {
+  .hero-content-wrapper {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+
+    img {
+      line-height: 1;
+      display: block;
+      max-width: 100%;
+      height: auto;
+    }
+
+    .hero-caption {
+      position: absolute;
+      text-align: left;
+      text-shadow: none;
+      bottom: auto;
+      top: 15%;
+      width: 600px;
+      right: 20%;
+      left: 20%;
+      padding-bottom: 30px;
+      z-index: 10;
+      padding-top: 20px;
+      color: #fff;
+
+      h3 {
+        line-height: 1.1;
+        margin-top: 0;
+        color: #fff;
+        font-size: 3.8rem;
+        font-weight: 500;
+        text-shadow: 0 0 3px rgba(0,0,0,.3);
+      }
+    }
+  }
+}
