Changed navbar id.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 {% include sitehead.html %}
 
-<nav id="navbar-main" class="navbar navbar-default" role="navigation">
+<nav id="navbar" class="navbar navbar-default" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
