--- a/_sass/_cards.scss
+++ b/_sass/_cards.scss
@@ -1,16 +1,67 @@
-// Cards on homepage.
-.cards {
-  margin-bottom: 2em;
+// Card style.
+.card-grid {
+  padding-top: 50px;
+  padding-bottom: 50px;
 
-  .card-item {
-    box-shadow: 0px 0px 5px #bbb;
-    margin-bottom: 2em;
-    padding: 1em;
+  figure {
+    position: relative;
+    max-height: 200px;
+    min-height: 200px;
+    overflow: hidden;
+    h4 {
+      font-size: 12px;
+      font-size: 1.2rem;
+      margin: 0;
+      position: absolute;
+      bottom: 0;
+      background-color: $site-secondary-color;
+      color: #FFF;
+      padding: 3px 2px 3px 2px;
+      font-weight: 500;
+      padding: 6px 10px 6px 10px;
+      letter-spacing: 0.03em;
+    }
+  }
+
+  .card {
+    background-color: #FFF;
+    min-height: 450px;
+    -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.28);
+    -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.28);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.28);
 
     h3 {
-      margin: 0px -4px 7px -4px;
-      padding: 2px;
-      border-bottom: 1px solid #ccc;
+      text-align: center;
+      color: #636466;
+      font-size: 20px;
+      font-size: 2rem;
+      font-weight: 500;
+      margin: 32px 64px 24px 64px;
+      min-height: 200px;
     }
+
+    .desc {
+      min-height: 100px;
+    }
+
+    p {
+      font-size: 12px;
+      font-size: 1.2rem;
+      font-weight: 400;
+      line-height: 1.4;
+      text-align: center;
+      padding: 0 28px 0 28px;
+    }
+
+    a {
+      margin: 30px;
+    }
+  }
+
+  p.intro {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 22px;
+    font-size: 2.2rem;
   }
 }
