--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,15 +1,16 @@
 <div class="row">
   <div class="col-sm-12 text-center margin-bottom-4">
-    <h2 class="margin-bottom-4 margin-top-0">Our Events</h2>
+    <h2 class="margin-bottom-4 margin-top-0">Past Events</h2>
   </div>
-  {% for event in site.events limit:include.limit %}
+  {% for event in site.data.events %}
     <div class="col-sm-4 col-centered">
-      <div class="panel panel-default padding-4 text-center event-panel">
+      <div class="panel panel-default padding-4 text-center event-panel" style="min-height: 350px">
         <div class="panel-icon">
           <i class="fa fa-book"></i>
         </div>
         <h4><a href="{{ event.url | prepend: site.baseurl }}">{{ event.title }}</a></h4>
-        <p>{{ event.excerpt | strip_html | truncatewords:35 }}</p>
+        <p>{{ event.date }}</p>
+        <p>{{ event.venue }}</p>
       </div>
     </div>
   {% endfor %}
