--- a/_sass/_cards.scss
+++ b/_sass/_cards.scss
@@ -1,4 +1,4 @@
-// Card style.
+// pacha card style.
 .card-grid {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -49,5 +49,23 @@
     margin-bottom: 20px;
     font-size: 22px;
     font-size: 2.2rem;
+  }
+}
+
+// Plain card style (for homepage).
+// Cards on homepage.
+.cards {
+  margin-bottom: 2em;
+
+  .card-item {
+    box-shadow: 0px 0px 5px #bbb;
+    margin-bottom: 2em;
+    padding: 1em;
+
+    h3 {
+      margin: 0px -4px 7px -4px;
+      padding: 2px;
+      border-bottom: 1px solid #ccc;
+    }
   }
 }
