Updated program detail sections.

--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -26,5 +26,12 @@ layout: default
 
 <div class="container">
   {{ content }}
-</div>
 
+	<h3>Program Overview/ Description</h3>
+	<h3>Program Mission</h3>
+	<h3>Program Offerings</h3>
+	<h3>Upcoming Events</h3>
+	<h3>Past Events</h3>
+	<h3>Call for Action</h3>
+	<h3>Additional Resources</h3>
+</div>
