--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,3 +1,3 @@
 // Our variables
-$site-secondary-color:  #78BE20; // for navbar and footer.
+$site-secondary-color:  #1E8BC9; // for navbar and footer.
 $footer-height:     110px; // used in body and footer for a fixed footer.
