Hid member link.

--- a/_includes/sitehead.html
+++ b/_includes/sitehead.html
@@ -8,7 +8,7 @@
     <div class="navbar-right hidden-xs">
       <div class="utilitynav">
         <span class="fac-hub">
-          <a href="#" class="fac-hub">Members</a>
+          <a href="#" class="fac-hub">&nbsp;</a>
         </span>
       </div>
       <div class="supernav">
