Removed extra margin.

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -783,7 +783,7 @@ body .btn.btn-wrap {
   background: #636466;
   border: none;
   border-radius: 0;
-  margin-bottom: 60px;
+  //margin-bottom: 60px;
 }
 
 #subnav {
