--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -4,7 +4,7 @@ html {
   min-height: 100%;
 }
 body {
-  margin-bottom: $footer-height;
+  margin-bottom: $footer-height + 50px;
 }
 
 // Content spacer.
