Added diaspora corner page type and nav.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,8 +21,11 @@
         <li class="dropdown {% if page.title == "Programs" %} active {% endif %}">
           <a href="{{ "/programs" | prepend: site.baseurl }}">Programs</a>
         </li>
-        <li class="last dropdown {% if page.title == "Events" %} active {% endif %}">
+        <li class="dropdown {% if page.title == "Events" %} active {% endif %}">
           <a href="{{ "/events" | prepend: site.baseurl }}">Events</a>
+        </li>
+        <li class="last dropdown {% if page.title == "Diaspora Corner" %} active {% endif %}">
+          <a href="{{ "/diaspora-corner" | prepend: site.baseurl }}">Diaspora Corner</a>
         </li>
       </ul>
     </div>
