--- a/_includes/diaspora-cards.html
+++ b/_includes/diaspora-cards.html
@@ -11,7 +11,7 @@
         <div class="copy-holder">
           <h3>{{ item.title }}</h3>
           <div class="desc">
-            <p></p>
+            <p>{{ item.position }}</p>
           </div>
           <p>
             <a href="{{ item.url }}" class="btn btn-donate">Learn More</a>
