--- a/_layouts/diaspora.html
+++ b/_layouts/diaspora.html
@@ -1,4 +1,21 @@
 ---
 layout: default
 ---
-{{ content }}
+<div class="container" style="margin-top: 4em">
+  <div class="row">
+
+    <div class="col-lg-8">
+      <div class="spacing"></div>
+      <h1 style="margin-top: 0">{{ page.title }}</h1>
+      {{ content }}
+    </div>
+
+    <div class="col-lg-4 diaspora-profile-sidebar">
+      <div class="profile-image">
+        <img src="{{ site.url }}/assets/images/diaspora/{{ page.image }}">
+      </div>
+    </div>
+
+  </div>
+</div>
+
