--- a/_sass/_diaspora.scss
+++ b/_sass/_diaspora.scss
@@ -14,3 +14,11 @@ body.diaspora {
     }
   }
 }
+
+.diaspora-profile-sidebar {
+  > .profile-image {
+    max-width: 200px;
+    min-width: 200px;
+    overflow: hidden;
+  }
+}
