--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
         <li><a href="/programs">Programs</a></li>
         <li><a href="/events">Events</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-left">
         <li class="hidden">
           <a href="#page-top"></a>
         </li>
