--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -13,8 +13,7 @@
             <p>
             The Career Development Program provides a platform to help members
             in their career development journey, from finding and gaining
-            employment through progressing towards individual career goals. YEP
-            organizes various programs and events such as invited...
+            employment through progressing towards individual career goals.
             <br>
             <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
