--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -27,7 +27,7 @@
             <img src="/assets/images/programs_callout_2.jpg">
           </figure>
           <div class="copy-holder">
-            <h3>Diaspora & Community Engagement</h3>
+            <h3>Diaspora and Community Engagement</h3>
             <p>
             The Diaspora and Community Engagement (DCE) Program looks to
             strengthen community relations and support the development of a
