--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -9,11 +9,13 @@ layout: default
     <div class="col-sm-7">
       <p>{{ page.description }}</p>
     </div>
-    <div class="col-sm-1"></div>
+ <!--   <div class="col-sm-1"></div>
     <div class="col-sm-4">
       <div class="medias">
         <div class="media-body">
-          
+          <div class="" style="margin-bottom: 0.5em">
+            <img src="/assets/images/misc/vacant.jpg">
+          </div>
           <div class="bold">{{ page.manager }}</div>
           <p class="text-muted">Program Manager</p>
         </div>
@@ -33,3 +35,4 @@ layout: default
 	<h3>Call for Action</h3>
 	<h3>Additional Resources</h3>
 </div>
+-->
