--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -47,8 +47,7 @@
           <div class="copy-holder">
             <h3>Professional Mentorship</h3>
             <p>
-            The Professional Mentorship Program is now live! The program
-            enables a one-on-one professional learning relationship between a
+            The Professional Mentorship program enables a one-on-one professional learning relationship between a
             mentor and mentee for members to expand their knowledge, leadership
             skills and enhance professional competencies.
             <br>
