--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -9,7 +9,7 @@ layout: default
     <div class="col-sm-7">
       <p>{{ page.description }}</p>
     </div>
- <!--   <div class="col-sm-1"></div>
+   <div class="col-sm-1"></div>
     <div class="col-sm-4">
       <div class="medias">
         <div class="media-body">
@@ -23,7 +23,7 @@ layout: default
     </div>
   </div>
 </div>
--->
+
 <div class="container">
   {{ content }}
 
