--- a/_sass/_diaspora.scss
+++ b/_sass/_diaspora.scss
@@ -8,9 +8,13 @@ body.diaspora {
         max-height: 300px;
         min-height: 200px;
         overflow: hidden;
+        @media only screen and (max-width : 768px) {
+          max-height: none;
+          min-height: 200px;
+        }
       }
 
-      .col-xs-3 {
+      .col-sm-3 {
         padding-left: 0; // Remove whitespace on left.
       }
 
