--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -74,3 +74,43 @@
     }
   }
 }
+
+// See https://codepen.io/dropside/pen/bxhke.
+.hero {
+  background: url(../assets/images/hero/IMG_0714.JPG);
+  background-size:cover;
+  background-position:center center;
+  background-attachment:fixed;
+
+  text-align:center;
+  position:relative;
+  width: 100%;
+
+  > .inner {
+    background: rgba(0,0,0,0.3) url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAYAAACddGYaAAAAD0lEQVQIW2NkQABjRmQOAAM+AGkQsDBSAAAAAElFTkSuQmCC) repeat;
+    min-height: 336px;
+    position: relative;
+
+    > .copy {
+      position: absolute;
+      top: 65%;
+      @media only screen and (max-width : 768px) {
+        top: 45%;
+      }
+      height: 5em;
+      margin-top: -5em;
+      width: 100%;
+    }
+  }
+
+  h1 {
+    margin-top: 0px;
+    padding:0px 20px;
+  }
+
+  h1,
+  p {
+    color:#fff;
+    padding: 0px 20px;
+  }
+}
