--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -6,7 +6,7 @@
       <div class="col-xs-12 col-md-4">
         <div class="card">
           <figure>
-            <img src="/assets/images/programs_callout_1.JPG">
+            <img src="/assets/images/programs_callout_1.jpg">
           </figure>
           <div class="copy-holder">
             <h3>Career Development Program</h3>
