--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -24,14 +24,15 @@
       <div class="col-xs-12 col-md-4">
         <div class="card">
           <figure>
-            <img src="/assets/images/programs_callout_2.JPG">
+            <img src="/assets/images/programs_callout_3.JPG">
           </figure>
           <div class="copy-holder">
-            <h3>Diaspora and Community Engagement</h3>
+            <h3>Personal and Professional Empowerment</h3>
             <p>
-            The Diaspora and Community Engagement (DCE) Program looks to
-            strengthen community relations and support the development of a
-            cohesive network.
+            Personal and Professional Empowerment is about looking at who you are 
+              and becoming more aware of yourself as a unique individual. 
+              Personal empowerment involves developing the confidence and 
+              strength to set realistic goals and fulfil your potential.
             <br>
             <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
@@ -42,14 +43,14 @@
       <div class="col-xs-12 col-md-4">
         <div class="card">
           <figure>
-            <img src="/assets/images/programs_callout_3.jpg">
+            <img src="/assets/images/programs_callout_2.JPG.jpg">
           </figure>
           <div class="copy-holder">
-            <h3>Professional Mentorship</h3>
+            <h3>Diaspora and Community Engagement</h3>
             <p>
-            The Professional Mentorship program enables a one-on-one professional learning relationship between a
-            mentor and mentee for members to expand their knowledge, leadership
-            skills and enhance professional competencies.
+            The Diaspora and Community Engagement (DCE) Program looks to
+            strengthen community relations and support the development of a
+            cohesive network.
             <br>
             <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
