--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -24,7 +24,7 @@
       <div class="col-xs-12 col-md-4">
         <div class="card">
           <figure>
-            <img src="/assets/images/programs_callout_2.JPG">
+            <img src="/assets/images/programs_callout_2.jpg">
           </figure>
           <div class="copy-holder">
             <h3>Personal and Professional Empowerment</h3>
@@ -43,7 +43,7 @@
       <div class="col-xs-12 col-md-4">
         <div class="card">
           <figure>
-            <img src="/assets/images/programs_callout_3.JPG.jpg">
+            <img src="/assets/images/programs_callout_3.jpg">
           </figure>
           <div class="copy-holder">
             <h3>Diaspora and Community Engagement</h3>
