--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -27,12 +27,10 @@
             <img src="/assets/images/programs_callout_2.jpg">
           </figure>
           <div class="copy-holder">
-            <h3>Personal and Professional Empowerment</h3>
+            <h3>Personal Empowerment Program</h3>
             <p>
-            Personal and Professional Empowerment is about looking at who you are 
-              and becoming more aware of yourself as a unique individual. 
-              Personal empowerment involves developing the confidence and 
-              strength to set realistic goals and fulfil your potential.
+            Personal and Professional Empowerment Program provides members the tools and resources to develop the confidence and 
+              strength to set realistic goals and fulfil their potential.
             <br>
             <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
@@ -50,7 +48,7 @@
             <p>
             The Diaspora and Community Engagement (DCE) Program looks to
             strengthen community relations and support the development of a
-            cohesive network.
+            cohesive network through various activities.
             <br>
             <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
