--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -32,7 +32,7 @@
             Personal and Professional Empowerment Program provides members the tools and resources to develop the confidence and 
               strength to set realistic goals and fulfil their potential.
             <br>
-            <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
+            <a href="https://yepnetwork.github.io/programs/personal-professional-empowerment.html" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
           </div>
         </div>
@@ -50,7 +50,7 @@
             strengthen community relations and support the development of a
             cohesive network through various activities.
             <br>
-            <a href="#" class="has-mp-click btn btn-donate">Learn More</a>
+            <a href="https://yepnetwork.github.io/programs/diaspora-community-engagement.html" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
           </div>
         </div>
