--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -10,7 +10,7 @@
           </figure>
           <div class="copy-holder">
             <h3>Career Development Program</h3>
-            <p>
+            <p ALIGN=LEFT>
             The Career Development Program provides a platform to help members
             in their career development journey, from finding and gaining
             employment through progressing towards individual career goals.
@@ -28,7 +28,7 @@
           </figure>
           <div class="copy-holder">
             <h3>Personal Empowerment Program</h3>
-            <p>
+            <p ALIGN=LEFT>
             Personal and Professional Empowerment Program provides members the tools and resources to develop the confidence and 
               strength to set realistic goals and fulfil their potential.
             <br>
@@ -45,7 +45,7 @@
           </figure>
           <div class="copy-holder">
             <h3>Diaspora and Community Engagement Program</h3>
-            <p>
+            <p ALIGN=LEFT>
             The Diaspora and Community Engagement (DCE) Program looks to
             strengthen community relations and support the development of a
             cohesive network through various activities.
