--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -9,8 +9,8 @@
             <img src="/assets/images/programs_callout_1.jpg">
           </figure>
           <div class="copy-holder">
-            <h3>Career Development Program</h3>
-            <p ALIGN=LEFT>
+            <h3 align="left">Career Development Program</h3>
+            <p  align="left">
             The Career Development Program provides a platform to help members
             in their career development journey, from finding and gaining
             employment through progressing towards individual career goals.
@@ -27,8 +27,8 @@
             <img src="/assets/images/programs_callout_2.jpg">
           </figure>
           <div class="copy-holder">
-            <h3>Personal Empowerment Program</h3>
-            <p ALIGN=LEFT>
+            <h3  align="left">Personal Empowerment Program</h3>
+            <p  align="left">
             Personal and Professional Empowerment Program provides members the tools and resources to develop the confidence and 
               strength to set realistic goals and fulfil their potential.
             <br>
@@ -44,8 +44,8 @@
             <img src="/assets/images/programs_callout_3.jpg">
           </figure>
           <div class="copy-holder">
-            <h3>Diaspora and Community Engagement Program</h3>
-            <p ALIGN=LEFT>
+            <h3  align="left">Diaspora and Community Engagement Program</h3>
+            <p  align="left">
             The Diaspora and Community Engagement (DCE) Program looks to
             strengthen community relations and support the development of a
             cohesive network through various activities.
