--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,5 +1,9 @@
 <div class="row">
   <div class="col-sm-12 text-center margin-bottom-4">
+    <h2 class="margin-bottom-4 margin-top-0">Upcoming Events</h2>
+  </div>
+<div class="row">
+  <div class="col-sm-12 text-center margin-bottom-4">
     <h2 class="margin-bottom-4 margin-top-0">Past Events</h2>
   </div>
   {% for event in site.data.events %}
