Change hero image overlay.

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -87,7 +87,7 @@
   width: 100%;
 
   > .inner {
-    background: rgba(0,0,0,0.3) url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAYAAACddGYaAAAAD0lEQVQIW2NkQABjRmQOAAM+AGkQsDBSAAAAAElFTkSuQmCC) repeat;
+    background: rgba(0, 0, 0, 0.53);
     min-height: 336px;
     position: relative;
 
