--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -6,7 +6,7 @@ layout: default
 
     <div class="col-lg-8">
       <div class="spacing"></div>
-      <h1>{{ page.title }}</h1>
+      <h1 style="margin: 0">{{ page.title }}</h1>
 
       {{ content }}
 
