--- a/_layouts/diaspora.html
+++ b/_layouts/diaspora.html
@@ -2,20 +2,15 @@
 layout: default
 ---
 <div class="container" style="margin-top: 4em">
+  <h1 style="margin-top: 0">{{ page.title }}</h1>
+
   <div class="row">
-
-    <div class="col-lg-8">
-      <div class="spacing"></div>
-      <h1 style="margin-top: 0">{{ page.title }}</h1>
-      {{ content }}
-    </div>
-
-    <div class="col-lg-4 diaspora-profile-sidebar">
-      <div class="profile-image">
-        <img src="{{ site.url }}/assets/images/diaspora/{{ page.image }}">
+    <div class="col-md-12">
+      <img class="profile-image" src="{{ site.url }}/assets/images/diaspora/{{ page.image }}">
+      <div class="story">
+        {{ content }}
       </div>
     </div>
-
   </div>
 </div>
 
