--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -1,7 +1,7 @@
 <section id="programs-callout">
   <div class="container">
-    <h2 class="h1 section-head">Get Involved</h2>
-    <p class="intro">Building a community, inspiring the future</p>
+    <h2 class="h1 section-head">What We Do</h2>
+    <p class="intro">Building a platform. Connecting the Ethiopian Diaspora</p>
     <div class="row">
       <div class="col-xs-12 col-md-4">
         <div class="card">
@@ -9,11 +9,9 @@
             <img src="/assets/images/programs_callout_1.jpg">
           </figure>
           <div class="copy-holder">
-            <h3 align="left">Career Development Program</h3>
+            <h3 align="left">Professional Empowerment</h3>
             <p  align="left">
-            The Career Development Program provides a platform to help members
-            in their career development journey, from finding and gaining
-            employment through progressing towards individual career goals.
+           Providing the tools and resources that help members excel in their different stages of career development journey.
             <br>
             <a href="https://yepnetwork.github.io/programs/career-development.html" class="has-mp-click btn btn-donate">Learn More</a>
             </p>
@@ -27,9 +25,9 @@
             <img src="/assets/images/programs_callout_2.jpg">
           </figure>
           <div class="copy-holder">
-            <h3  align="left">Personal Empowerment Program</h3>
+            <h3  align="left">Personal Empowerment </h3>
             <p  align="left">
-            Personal and Professional Empowerment Program provides members the tools and resources to develop the confidence and 
+            Providing the tools and resources that help members develop the confidence and 
               strength to set realistic goals and fulfil their potential.
             <br>
             <a href="https://yepnetwork.github.io/programs/personal-professional-empowerment.html" class="has-mp-click btn btn-donate">Learn More</a>
@@ -44,10 +42,9 @@
             <img src="/assets/images/programs_callout_3.jpg">
           </figure>
           <div class="copy-holder">
-            <h3  align="left">Diaspora and Community Engagement Program</h3>
+            <h3  align="left">Community Empowerment </h3>
             <p  align="left">
-            The Diaspora and Community Engagement (DCE) Program looks to
-            strengthen community relations and support the development of a
+            Bringing our community together andd support the development of a
             cohesive network through various activities.
             <br>
             <a href="https://yepnetwork.github.io/programs/diaspora-community-engagement.html" class="has-mp-click btn btn-donate">Learn More</a>
