--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -44,7 +44,7 @@
           <div class="copy-holder">
             <h3  align="left">Community Empowerment </h3>
             <p  align="left">
-            Bringing our community together andd support the development of a
+            Bringing our community together and support the development of a
             cohesive network through various activities.
             <br>
             <a href="https://yepnetwork.github.io/programs/diaspora-community-engagement.html" class="has-mp-click btn btn-donate">Learn More</a>
