--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,4 +63,7 @@
 
   <!-- Gallery -->
   <link rel="stylesheet" href="{{ "/assets/css/blueimp-gallery.min.css" | prepend: site.baseurl }}">
+
+  <!-- Custom js -->
+  <script src="{{ "/js/core.js" | prepend: site.baseurl }}"></script>
 </head>
